force-app/main/default/objects/DemoSetupStatus__c/DemoSetupStatus__c.object-meta.xml
<CustomObject>
    <description>The run-time portion of Demo Setup, where status and error messages are stored.  This object is used in conjunction with the Demo Setup Step custom metadata type</description>
    <label>Org Setup Status</label>
    <nameField>
        <displayFormat>DSS-{000000}</displayFormat>
        <label>DSS#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Setup Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>