force-app/main/default/objects/DemoSetupStatus__c/fields/ErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>ErrorMessage__c</fullName>
    <description>In the case of an error, the contents of the error message are stored here for troubleshooting purposes and display to the user.  To fully reset a step, this field must be cleared.</description>
    <inlineHelpText>In the case of an error, the contents of the error message are stored here for troubleshooting purposes and display to the user.  To fully reset a step, this field must be cleared.</inlineHelpText>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>