force-app/main/default/objects/DemoSetupStatus__c/fields/StepNumber__c.field-meta.xml
<CustomField>
    <fullName>StepNumber__c</fullName>
    <description>The unique identifier that matches up the metadata step number with the same value.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique identifier that matches up the metadata step number with the same value.</inlineHelpText>
    <label>Step Number</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>