force-app/main/default/objects/DemoSetupStatus__c/fields/StepStatus__c.field-meta.xml
<CustomField>
    <fullName>StepStatus__c</fullName>
    <defaultValue>&quot;Not Started&quot;</defaultValue>
    <description>The current status of the step.</description>
    <inlineHelpText>The current status of the step.</inlineHelpText>
    <label>Step Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>